# provenanceai

./: .flake8  .gitignore  LICENCE  LICENSE  README.md  mypy.ini  pyproject.toml  sample.txt  some.docx
.github/workflows/: tests.yml
config/: default.yaml  production.yaml
docs/: quickstart.md
examples/: verify_installation.py
examples/rag_integration/: rag_integration_example.py
python scripts/: final_check.py  final_cleanup.py  final_release_fix.py  fix_all_issues.py  fix_flake8_issues.py  fix_mypy_issues.py  scaffold_provenanceai.py  validate_release.py  validate_release_fixed.py
src/provenanceai/: __init__.py  api.py
src/provenanceai/config/: __init__.py
src/provenanceai/core/: __init__.py  schema.py
src/provenanceai/inference/: provenance_inferencer.py
src/provenanceai/ingestion/: document_loader.py
src/provenanceai/integration/: rag_adapters.py
src/provenanceai/policy/: __init__.py  ai_policy_engine.py
src/provenanceai/trust/: scoring_engine.py
src/provenanceai/utils/: caching.py  exceptions.py  logging.py  validation.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample.txt
tests/integration/: test_api.py  test_full_pipeline.py
tests/performance/: test_benchmarks.py
tests/unit/: test_core_schema.py  test_document_ingestion.py  test_error_handling.py  test_provenance_inference.py  test_trust_scoring.py
